<resources>
    <string name="is_test">1</string>
    <string name="app_name">on</string>
    <string name="api_url">http://210.140.165.80/on/2.0/api.php</string>
    <string name="ok">OK</string>
    <string name="fb_app_id">172287869777831</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">mainActivity</string>
    <string name="title_activity_telephone">telephoneActivity</string>
    <string name="title_activity_eula">eulaActivity</string>
    <string name="color_code_link_green">#a450c81e</string>
    <string name="title_activity_verify">verifyActivity</string>
    <string name="title_activity_regist_profile">registProfileActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="title_activity_on_list">onListActivity</string>
    <string name="title_activity_hi_list">hiListActivity</string>
    <string name="title_activity_friend_list">friendListActivity</string>
    <string name="title_activity_home_tab">homeTabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_home2">home2Activity</string>
    <string name="title_activity_profile_edit">profileEditActivity</string>
    <string name="title_activity_profil_edit_name">profilEditNameActivity</string>
    <string name="title_activity_profil_edit_id">profilEditIdActivity</string>
    <string name="title_activity_profile_edit_id">profileEditIdActivity</string>
    <string name="title_activity_profile_edit_draw_qr">profileEditDrawQrActivity</string>
    <string name="title_activity_profile_edit_read_qr">profileEditReadQrActivity</string>
    <string name="title_activity_group_edit">groupEditActivity</string>
    <string name="title_activity_group_member_select">groupMemberSelectActivity</string>
    <string name="title_activity_invite_friends">InviteFriendsActivity</string>
    <string name="title_activity_profile_edit_qr_result">profileEditQrResult</string>
    <string name="title_activity_friend_profile">friendProfileActivity</string>
    <string name="title_activity_fb_login">fbLoginActivity</string>
    <string name="title_activity_on_list_view_cell01">on_list_view_cell01</string>
    <string name="title_activity_on_list_view_cell02">on_list_view_cell02</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="head_back">《 Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="complete">Done</string>
    <string name="blockConfirm">%sさんをブロックします。\nよろしいですか？</string>
    <string name="lc_DaysAgo">%d day(s) ago</string>
    <string name="lc_HoursAgo">%d hour(s) ago</string>
    <string name="lc_MinitsAgo">%d min(s) ago</string>
    <string name="lc_SecondsAgo">%d sec(s) ago</string>
    <string name="lc_JustNow">Just now</string>
    <string name="listAct_doBlock">ブロックする</string>
    <string name="listAct_deBlock">ブロックを解除する</string>
    <string name="listAct_doSilent">非通知にする</string>
    <string name="listAct_deSilent">非通知を解除する</string>
    <string name="telAct_phoneInputEditText_hint">Input phone number</string>
    <string name="telAct_InputCheck">Phone number is required.</string>
    <string name="telAct_telephoneRegistButton_text">Send</string>
    <string name="telAct_eula_full_text">Lisence Agreement</string>
    <string name="telAct_eula_link_text">Lisence</string>
    <string name="telAct_AcceptErr">Check Lisence Agreement</string>
    <string name="telAct_Restart">Do you restart regist?</string>
    <string name="verifyAct_codeInputEditText_hint">Enter 4-digit code.</string>
    <string name="verifyAct_VerifyError">Authentication code is incorrect.</string>
    <string name="verifyAct_codeRegistButton_text">Authentication</string>
    <string name="verifyAct_InputCheck">Input Authentication code.</string>
    <string name="registAct_guide_text">Choose upload source.</string>
    <string name="registAct_nameInputEditText_hint">Please input your name</string>
    <string name="profileAct_imageInputCheck">Profile photo is required</string>
    <string name="profileAct_nameInputCheck">Your name is required.</string>
    <string name="registAct_profileRegistButton_text">Finish Registration</string>
    <string name="homeAct_onCountZero">You are not ON with anyone.</string>
    <string name="homeAct_onCount">You are ON with %s People.</string>
    <string name="homeAct_profileCommentHint">Ex.) I\'m now _at_. (50 chars max)</string>
    <string name="homeAct_groupHi_confirm">Send Hi to all group members.</string>
    <string name="homeAct_allOn_confirm">Send ON to all group members.</string>
    <string name="homeAct_profileCommentError">Comments are limited to 50 characters.</string>
    <string name="homeAct_subject_friends">Select People</string>
    <string name="homeAct_subject_group">Select by Group</string>
    <string name="homeAct_subject_add">Create</string>
    <string name="homeAct_friend_list">Friends</string>
    <string name="homeAct_group_add">Create Group</string>
    <string name="homeAct_qr_add">add by QR-code</string>
    <string name="homeAct_id_add">search by ID</string>
    <string name="homeAct_my_qr">my QR-code</string>
    <string name="homeAct_invite">Invite</string>
    <string name="homeAct_invite_LINE">Invite via LINE</string>
    <string name="homeAct_invite_SMS">Invite via SMS</string>
    <string name="homeAct_ForceUpdate">最新のバージョンに更新してください。</string>
    <string name="homeAct_Update">最新のバージョンがダウンロード可能です。\n更新しますか？</string>
    <string name="homeAct_all">All</string>
    <string name="friendListAct_noFriend">You currently have no friends who are ON with you.</string>
    <string name="friendListAct_offBlock">Unblock</string>
    <string name="friendListAct_subject">Friends</string>
    <string name="friendListAct_delete">deleated friends</string>
    <string name="delFriendListAct_noFriend">You currently have no deleted friends who are ON with you.</string>
    <string name="delFriendListAct_subject">deleated friends</string>
    <string name="friendProfAct_naviTitle">Profile</string>
    <string name="friendProfAct_doBlock">Block</string>
    <string name="friendProfAct_deBlock">Unblock</string>
    <string name="friendProfAct_doSilent">Notifications off</string>
    <string name="friendProfAct_deSilent">Turn notifications on</string>
    <string name="friendProfAct_doDelete">Delete</string>
    <string name="friendProfAct_deleteConfirm">%sさんを友達から削除します。\nよろしいですか？</string>
    <string name="onListAct_noFriend">You currently have no ON friends.</string>
    <string name="onListAct_Subject1">あなたにONしている人</string>
    <string name="onListAct_Subject2">過去のON一覧</string>
    <string name="onListAct_noFriend1">現在ONの友達はいません。</string>
    <string name="onListAct_noFriend2">過去にONをした友達はいません。</string>
    <string name="hiListAct_noFriend">There are currently no Hi.</string>
    <string name="hiListAct_doBlock">Block</string>
    <string name="hiListAct_deBlock">Unblock</string>
    <string name="hiListAct_doSilent">Notifications off</string>
    <string name="hiListAct_deSilent">Turn notifications on</string>
    <string name="profEditAct_naviTitle">Profile update</string>
    <string name="profEditAct_listName">Name</string>
    <string name="profEditAct_listId">ID</string>
    <string name="profEditAct_listReadQR">Read QR Code</string>
    <string name="profEditAct_listDrawQR">My QR Code</string>
    <string name="profEditActName_naviTitle">edit name</string>
    <string name="profEditActId_naviTitle">edit ID</string>
    <string name="profEditActReadQr_naviTitle">QR-code reader</string>
    <string name="profEditActDrawQr_naviTitle">My QR Code</string>
    <string name="profEditActQrResult_naviTitle">read QR-code</string>
    <string name="profEditAct_profUpdate">Profile updated</string>
    <string name="profEditAct_profIdNotUnique">既に使われているIDです</string>
    <string name="profEditAct_DrawQr_guide">if your friend use this QR-code.\nregist your friend.</string>
    <string name="profEditAct_QrDefault">Read QR Code</string>
    <string name="profEditAct_QrRegisted">already your friend</string>
    <string name="profEditAct_QrAddComplete">add complete</string>
    <string name="profEditAct_QrLimitOver">security limit over</string>
    <string name="profEditAct_QrIllegal">illegal QR-code</string>
    <string name="groupEditAct_naviTitle">Create new Group</string>
    <string name="groupEditAct_Delete">Delete Group</string>
    <string name="groupEditAct_Friends">Select People</string>
    <string name="groupEditAct_ListSubject">Group Members</string>
    <string name="groupEditAct_EditViewHint">Group Name</string>
    <string name="groupEditAct_noMemberWarning">Select a Member</string>
    <string name="groupEditAct_noTitleWarning">Group Name is not input yet.</string>
    <string name="groupEditAct_saveConfirm">Save?</string>
    <string name="groupEditAct_backSaveConfirm">Save?</string>
    <string name="groupEditAct_deleteConfirm">Are you sure you want to delete this Group?</string>
    <string name="inviteFriendsAct_naviTitle">Invite via SMS</string>
    <string name="inviteFriendsAct_noFriend">You don\'t have any friends to invite to ON.</string>
    <string name="inviteFriendsAct_selectMail">Choose EMail-Address.</string>
    <string name="inviteFriendsAct_selectPhone">Choose Phone-Number for SMS</string>
    <string name="inviteFriendsAct_mailSubject">Join us to ON</string>
    <string name="searchFriendAct_naviTitle">search friend via ID</string>
    <string name="searchFriendAct_editHint">input friend id</string>
    <string name="searchFriendAct_myId">my ID</string>
    <string name="talkAct_naviTitle">%sさんとのトーク</string>
    <string name="talkAct_nothing">トークをはじめましょう。</string>
    <string name="title_activity_search_friend">searchFriendActivity</string>
    <string name="title_activity_deleted_friend_list">deletedFriendListActivity</string>
    <string name="title_activity_search_friend2">searchFriendActivity2</string>
    <string name="title_activity_friend_profile_edit_nick_name">friendProfileEditNickNameActivity
    </string>
    <string name="title_activity_talk">talkActivity</string>
</resources>