<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_zero_margin"
    android:paddingRight="@dimen/activity_zero_margin"
    android:paddingTop="@dimen/activity_zero_margin"
    android:paddingBottom="@dimen/activity_zero_margin"
    android:background="@color/bg_white"
    tools:context="jp.co.webshark.on2.friendProfileActivity">


    <!-- === ヘッダ部 ============================================================================== -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_height"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/header_in"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/linkTextView"
                android:clickable="true"
                android:onClick="friendProfileClose"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/navigation_height"
                android:text="@string/back"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:textSize="@dimen/navigation_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/navigationTitle"
                android:text="@string/friendProfAct_naviTitle"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/navigation_text_size" />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/heade_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/background_material_dark"
        android:layout_below="@+id/header"
        android:orientation="vertical" >
    </LinearLayout>
    <!-- === ヘッダ部 ============================================================================== -->

    <jp.co.webshark.on2.customViews.HttpImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/friend_prof_image_height"
        android:layout_height="@dimen/friend_prof_image_height"
        android:src="@drawable/list_icon_user"
        android:layout_below="@+id/heade_line"
        android:layout_marginTop="@dimen/friend_prof_top_margin"
        android:layout_centerHorizontal="true">
    </jp.co.webshark.on2.customViews.HttpImageView>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profEditAct_listName"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/silentButton"
        android:onClick="actSilent"
        android:layout_width="@dimen/friend_prof_image_height"
        android:layout_height="@dimen/activity_button_height"
        android:text="@string/friendProfAct_deSilent"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:layout_below="@+id/nameTextView"
        android:layout_toRightOf="@+id/cellFriendProfileImage"
        android:layout_centerHorizontal="true"
        android:textColor="@drawable/button_design_front"
        android:background="@drawable/button_design_back" />

    <Button
        android:id="@+id/blockButton"
        android:onClick="actBlock"
        android:layout_width="@dimen/friend_prof_image_height"
        android:layout_height="@dimen/activity_button_height"
        android:text="@string/friendProfAct_deBlock"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:layout_below="@+id/silentButton"
        android:layout_toRightOf="@+id/cellFriendProfileImage"
        android:layout_centerHorizontal="true"
        android:textColor="@drawable/button_design_front"
        android:background="@drawable/button_design_back" />

</RelativeLayout>
