<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_zero_margin"
    android:paddingRight="@dimen/activity_zero_margin"
    android:paddingTop="@dimen/activity_zero_margin"
    android:paddingBottom="@dimen/activity_zero_margin"
    android:background="@color/bg_white"
    tools:context="jp.co.webshark.on2.profileEditQrResult">


<!-- === ヘッダ部 ============================================================================== -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_height"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/header_in"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/linkTextView"
                android:clickable="true"
                android:onClick="profileQrResultClose"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/navigation_height"
                android:text="@string/back"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:textSize="@dimen/navigation_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/navigationTitle"
                android:text="@string/profEditActQrResult_naviTitle"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/navigation_text_size" />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/heade_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/background_material_dark"
        android:layout_below="@+id/header"
        android:orientation="vertical" >
    </LinearLayout>
<!-- === ヘッダ部 ============================================================================== -->

    <RelativeLayout
        android:id="@+id/profile_image_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/heade_line">

        <jp.co.webshark.on2.customViews.HttpImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/pe_qr_result_image"
            android:layout_height="@dimen/pe_qr_result_image"
            android:src="@drawable/list_icon_user"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/pe_qr_result_image_top"
            android:layout_centerHorizontal="true">
        </jp.co.webshark.on2.customViews.HttpImageView>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/profEditAct_listName"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/addQrFriendButton"
            android:onClick="addQrFriend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_button_height"
            android:text="@string/profEditAct_QrDefault"
            android:layout_below="@+id/nameTextView"
            android:layout_marginLeft="@dimen/pe_qr_result_button_margin"
            android:layout_marginRight="@dimen/pe_qr_result_button_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@drawable/button_design_front"
            android:background="@drawable/button_design_back"/>
    </RelativeLayout>
</RelativeLayout>
